--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cu.enchufecompany.red_cuba">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="red_cuba"
+        android:usesCleartextTraffic="true"
+        android:label="Buscador redCUBA"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
