--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,14 @@ dependencies:
   html:
   shared_preferences:
   web_scraper:
-  flutter_screenutil: ^5.0.0+2
+  url_launcher: 6.0.9
+  flutter_launcher_icons: ^0.9.2
 
+flutter_icons:
+  ios: true
+  android: true
+  image_path_ios: "assets/images/icono.png"
+  image_path_android: "assets/images/icono.png"
 
 dev_dependencies:
   flutter_test:
